changed code depending on deprecated features